--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "12345678",
-    "database": "Notepadd",
+    "database": "Notepadd_Node",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "12345678",
-    "database": "Notepadd",
+    "database": "Notepadd_Node",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "12345678",
-    "database": "Notepadd",
+    "database": "Notepadd_Node",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
